# phasmcore

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_LICENSES  cap_enc_dec_split.sh  cap_realworld_810.sh  dist-workspace.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: bit-exact.yml  openh264-cross-arch.yml  publish-crates.yml
cli/: Cargo.toml
cli/src/: capacity.rs  decode.rs  encode.rs  error.rs  image_conv.rs  main.rs  output.rs  passphrase.rs  progress.rs  transcode.rs  video_capacity.rs  video_encode.rs
dav1d-sys/: Cargo.toml  build.rs
dav1d-sys/shim/: phasm_dav1d_stub.c
dav1d-sys/src/: lib.rs
eval/: .gitignore  Dockerfile  README.md  REPRO_DATASETS.md  pyproject.toml
eval/detectors/: cost_pool_sensitivity.py  cross_eval_pe.py  extract_cost_pool_features.py  extract_hand_crafted_features.py  extract_handcrafted_cover_stego.py  extract_rich_model_features.py  hyperparam_search_xgboost.py  run_pretrained_effnet.py  run_pretrained_srnet_aletheia.py  run_trained_efficientnet.py  run_trained_srnet.py  train_efficientnet.py  train_fld_ensemble.py  train_handcrafted_classifier.py  train_handcrafted_classifier_full.py  train_mlp_handcrafted.py  train_shadow_classifier.py  train_srnet.py
eval/prep/: download_alaska_covers.py  download_bossbase.py  encode_jpeg.py  generate_jin_pretrain.py  generate_juniward.py  generate_phasm_ghost.py  generate_phasm_shadows.py  prepare_alaska_qf75.py
eval/runs/: REPRO.md
eval/scripts/: audit_juniward_off_by_one.py  build_paper_figures.py  capacity_sweep.py  cleanup_e6_qf95.sh  compress_checkpoints.sh  decompress_checkpoints.sh  gap3_gfrfld_train_chain.sh  launch_srnet_training.sh  relaunch_matched_train.sh  run_e10_shadow_pe.py  run_e12_cross_source.sh  run_e13_siuniward_ablation.py  run_e15_effnet_shadow_pe.py  run_e15_full_pipeline.sh  run_e16_alaska_reverse_pipeline.sh  run_e16_then_e17.sh  run_e17_effnet_longer.sh  run_e18_quant_steganalysis.py  run_e18_stage2_ws.py  run_matched_detector_experiment.sh  srnet_juniward_queue.sh  srnet_qf95_pf010_curriculum.sh  wait_pf050_then_eval.sh  wait_then_eval.sh
examples/: cost_hash_check.rs  diagnose_decode.rs  h264_bframe_demo.rs  h264_cabac_decoder.rs  h264_cabac_drift.rs  h264_cabac_n_frame_test.rs  h264_cabac_real_world.rs  h264_cabac_spec_ref.rs  h264_cabac_trace_diff.rs  h264_cabac_vs_cavlc_rd.rs  h264_capacity_report.rs  h264_cavlc_mode_stats.rs  h264_cavlc_real_world_validate.rs  h264_encode_full_img4138.rs  h264_encode_full_img4273.rs  h264_encode_generic.rs  h264_encode_test.rs  h264_i8x8_rd_report.rs  h264_ibpbp_diag.rs  h264_iip_1080p_force.rs  h264_iip_32x32_parity.rs  h264_iip_parity_real.rs  h264_intra_in_p_parity_test.rs  h264_long_form_bench.rs  h264_multigop_bench.rs  h264_multigop_parity.rs  h264_nframe_bench.rs  h264_nframe_drift.rs  h264_p_slice_parse.rs  h264_recon_diff_test.rs  h264_state_reset_diag.rs  h264_stealth_retrospective.rs  h264_stego_1080p_smoke.rs  h264_stego_4domain_bench.rs  h264_stego_bench.rs  h264_ytnews_calib.rs  openh264_clean_encode.rs  openh264_visual_demo.rs  sector_lut_hash_check.rs  test_encode.rs  (+3 more)
openh264-sys/: Cargo.toml  build.rs
openh264-sys/shim/: phasm_decoder_shim.cc  phasm_decoder_shim.h  phasm_encoder_shim.cc  phasm_encoder_shim.h  phasm_openh264_stub.c
openh264-sys/src/: lib.rs
src/: det_math.rs  lib.rs
src/codec/: mod.rs
src/codec/av1/: mod.rs
src/codec/h264/: b_partition_meta.rs  bitstream.rs  cavlc.rs  cavlc_size.rs  cavlc_writer.rs  fingerprint.rs  intra_pred.rs  intra_pred_8x8.rs  macroblock.rs  mod.rs  mv.rs  openh264.rs  openh264_stego.rs  pass2_cache.rs  profile.rs  progress.rs  reconstruct.rs  slice.rs  sps.rs  streaming_session.rs  tables.rs  transform.rs
src/codec/jpeg/: bitio.rs  frame.rs  huffman.rs  mod.rs  (+5 more)
src/jpeg/: bitio.rs  dct.rs  error.rs  frame.rs  huffman.rs  marker.rs  mod.rs  pixels.rs  scan.rs  tables.rs  zigzag.rs
src/stego/: balanced_allocation.rs  calibration.rs  capacity.rs  chunk_frame.rs  crypto.rs  error.rs  frame.rs  memory.rs  mod.rs  optimizer.rs  payload.rs  permute.rs  pipeline.rs  progress.rs  quality.rs  shadow.rs  shadow_layer.rs  side_info.rs
test-vectors/: .gitignore
test-vectors/image/: README.md
tests/: armor_geometry.rs  armor_roundtrip.rs  av1_4k_validation.rs  av1_aoso_steganalyzer.rs  av1_b150_cascade_spike.rs  av1_b2_cullevel_spike.rs  av1_b2_joint_parity.rs  av1_bit_meta_capture.rs  av1_bit_meta_parity.rs  av1_capacity_api.rs  av1_corpus_validation.rs  av1_desktop_render.rs  av1_diag_1080p_pipeline.rs  av1_force_mode_bisect.rs  av1_gop_boundary_probe.rs  av1_mp4_audio_passthrough.rs  av1_mp4_build_mp4_av1.rs  av1_mp4_obu_split.rs  av1_mp4_parse_sequence_header.rs  av1_native_res_bench.rs  av1_pict_type_assertion.rs  av1_pull_memory_bound.rs  av1_pull_no_shadow_roundtrip.rs  av1_pull_whole_video_shadow_roundtrip.rs  av1_recon_buffer_separation.rs  av1_self_steganalyzer.rs  av1_session_gop_bitrate.rs  av1_session_multi_frame_gop.rs  av1_session_per_gop_alloc.rs  av1_session_plan_safe_balanced.rs  av1_session_shadows.rs  av1_session_whole_video_shadow.rs  av1_shadow_capacity_calibration.rs  av1_shadow_e2e.rs  av1_shadow_priority.rs  av1_speed_capacity_bench.rs  av1_streaming_session_d1.rs  av1_v6_probe_with_shadows.rs  av1_v6_production_probe.rs  av1_visual_psnr.rs  (+132 more)
tests/common/: h264_oracle.rs  mod.rs  oh264_stream.rs  ship_gate.rs
tests/data/: REFERENCE_DISTRIBUTIONS.md  dji_mini2_2_7k_reference_mb_histogram.txt  lumix_g9_1080p_reference_mb_histogram.txt  openh264_baseline_carplane_reference_mb_histogram.txt  openh264_baseline_dji_mini2_reference_mb_histogram.txt  openh264_baseline_img4138_reference_mb_histogram.txt  openh264_baseline_img4273_reference_mb_histogram.txt  openh264_baseline_lumix_g9_reference_mb_histogram.txt  x264_reference_mb_histogram.txt  x264_reference_mb_histogram_4273.txt  x264_reference_mb_histogram_samefixture.txt
wasm-bridge/: Cargo.toml
wasm-bridge/src/: lib.rs
(+147 files in other folders)
