[workspace]
members = ["cli"]

[package]
name = "phasm-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Pure-Rust steganography engine — hide encrypted messages in JPEG photos"
repository = "https://github.com/cgaffga/phasmcore"
authors = ["Christoph Gaffga"]
keywords = ["steganography", "jpeg", "encryption", "stego"]
categories = ["multimedia::images", "cryptography"]

[features]
default = []
parallel = ["rayon"]
# `video` enables the active H.264 Baseline CAVLC pipeline (production).
# Pulls in memmap2 for the path-based streaming API used by the iOS +
# Android bridges to avoid loading entire videos into heap.
video = ["memmap2"]
# `h264-encoder` enables the Phase 6 pure-Rust H.264 encoder (under
# core/src/codec/h264/encoder/) plus its CABAC entropy-coder companion
# (core/src/codec/h264/cabac/). OFF by default so the GitHub-release
# CLI binary distribution NEVER bundles an H.264 encoder (Via LA AVC
# patent-pool obligations — see docs/design/h264-video-steganography.md
# §"Patent licensing — distribution plan"). Mobile bridges
# (ios-bridge, android-bridge) enable this feature explicitly. CLI
# users wanting video stego must build from source with
# `cargo install phasm-cli --features h264-encoder`.
h264-encoder = ["video"]
wasm = ["js-sys", "wasm-bindgen"]

[dependencies]
aes-gcm-siv = "0.11"
argon2 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
crc32fast = "1.4"
hmac = "0.12"
sha2 = "0.10"
num-complex = "0.4"
rayon = { version = "1", optional = true }
brotli = { version = "7", default-features = false, features = ["std"] }
zeroize = "1"
memmap2 = { version = "0.9", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
