[workspace]
members = ["cli"]

[package]
name = "phasm-core"
version = "0.3.2"
edition = "2024"
license = "GPL-3.0-only"
description = "Pure-Rust steganography engine — hide encrypted messages in JPEG photos"
repository = "https://github.com/cgaffga/phasmcore"
authors = ["Christoph Gaffga"]
keywords = ["steganography", "jpeg", "encryption", "stego"]
categories = ["multimedia::images", "cryptography"]

[features]
default = []
parallel = ["rayon"]
# `simd` enables hand-vectorised SIMD kernels in the H.264 encoder
# (NEON on aarch64, AVX2 on x86_64, SIMD128 on wasm32). Falls back to
# scalar paths when off OR on architectures without a kernel. All
# SIMD kernels are integer-only + FMA-free → bit-exact across iOS /
# Android / x86_64 / WASM. Set `PHASM_H264_DISABLE_SIMD=1` env var to
# force scalar even when this feature is compiled in (debug / A-B).
simd = []
# `video` enables the active H.264 Baseline CAVLC pipeline (production).
# Pulls in memmap2 for the path-based streaming API used by the iOS +
# Android bridges to avoid loading entire videos into heap.
video = ["memmap2"]
# `h264-decoder` — H.264 stego DECODE: the pure-Rust bin-walker + stego
# extract, with NO C dependency. The standalone decode gate (App Clip /
# decode-only WASM can decode phasm H.264 stego without linking OpenH264).
# Implied by `h264-encoder`.
h264-decoder = ["video"]
wasm = ["js-sys", "wasm-bindgen"]
# T3.1 — integer fixed-point 8×8 DCT/IDCT (LL&M, libjpeg-turbo
# `jfdctint.c` / `jidctint.c` port) shipped 2026-05-21 with NEON
# (aarch64) + AVX2 (x86_64) + WASM SIMD128 + scalar paths, all
# bit-exact (cross-platform SHA256 `8affcdb9…` matches on every arch).
# Phase F removed the `aan-dct` feature gate; the integer LL&M
# kernels are now always built and the f64 reference paths in
# `pixels.rs` are retained ONLY for the SI-UNIWARD and basis-function
# carve-outs (continuous-precision requirements). See
# `docs/design/image/t3.1-integer-aan.md`.

[dependencies]
aes-gcm-siv = "0.11"
argon2 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
crc32fast = "1.4"
hmac = "0.12"
# T2.12 — radix sort u64 ChaCha20 priorities in shadow position
# selection. Pure Rust, no_std, MIT/Apache, no transitive deps.
radsort = "0.1"
sha2 = "0.10"
num-complex = "0.4"
rayon = { version = "1", optional = true }
brotli = { version = "7", default-features = false, features = ["std"] }
zeroize = "1"
memmap2 = { version = "0.9", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
# Dev-only deps. Used by the M1 memory-audit harness
# (core/tests/perf_memory_audit.rs) to synthesize JPEG fixtures at
# arbitrary MP without bundling huge binary blobs in test-vectors/.
[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg"] }
# libc for peak-RSS query in the 60 MP memory regression test
# (`tests/optimizer_memory_60mp.rs`). POSIX `getrusage` via libc is
# the cleanest cross-Unix way; non-Unix targets fall through with
# RSS=0 (the test still gates wall time on those).
libc = "0.2"

# `h264_cabac_decoder` is a standalone spec-direct CABAC decoder
# (debugging aid) that imports the H.264 walker/parser modules at
# module scope, so it only builds when the decode feature is present.
# Without this gate it fails `cargo test` / `cargo build` in the
# default (no-video) configuration. The two `openh264_*` examples are
# self-gated via `#[cfg]/#[cfg(not)]` mains and need no entry here.
[[example]]
name = "h264_cabac_decoder"
required-features = ["h264-decoder"]

# `av1_calibrate` is the G.2 Phase 2 calibration measurement binary.
# Same gating idiom — the file is `#![cfg(all(feature = "av1-encoder",
# feature = "av1-decoder"))]` at module scope and Cargo would otherwise
# fail with `main not found` on default-feature builds.
[[bin]]
name = "av1_calibrate"
required-features = ["av1-encoder", "av1-decoder"]

# `av1_stealth_sweep` — G.2 Phase 2 Tier 2 AUC-vs-utilization measurement
# binary. Parameterizes the W6 self-steganalyzer's measurement loop on
# utilization rate. Same gating as av1_calibrate.
[[bin]]
name = "av1_stealth_sweep"
required-features = ["av1-encoder", "av1-decoder"]

# `h264_calibrate` — #844 codec-parity Tier 1 calibration binary for the
# H.264 path. Runs `StreamingProbeSession` at the production GOP size and
# emits per-GOP cap-byte stats as JSON. Same module-scope `#![cfg(all(...))]`
# gating idiom as the AV1 binaries.
[[bin]]
name = "h264_calibrate"
required-features = ["h264-encoder", "h264-decoder"]

# `h264_stealth_sweep` — #844 Tier 2 W6 AUC-vs-utilization measurement on the
# H.264 CoeffSign domain. Same gating idiom as h264_calibrate.
[[bin]]
name = "h264_stealth_sweep"
required-features = ["h264-encoder", "h264-decoder"]

# stealth-audit-2026-06-29: AV1 per-block histogram collector. Drives
# dav1d (via core-dav1d-sys) with the new `block_hook` to walk every
# decoded Av1Block and tally partition / mode / MV / ref distributions.
# Output is TSV — feed both phasm and rav1e-CLI streams through and
# compare via χ² / KS tests downstream. See
# `docs/design/video/av1/stealth-audit-speed-preset-2026-06-29.md`.
[[bin]]
name = "av1_block_hist"
required-features = ["av1-encoder", "av1-decoder"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Clippy lint policy. Codec code ships spec-idiomatic patterns that clippy
# flags but we deliberately keep — index-based loops over spec-indexed
# coefficient/pixel arrays, many-param fns matching spec signatures,
# single-char names (u, v, x, y, i, j, k) that match H.264/HEVC/JPEG
# specs. Rewriting these to satisfy clippy would actively hurt
# auditability. SIMD / MT work (Phase I.1, I.2) inherits zero warnings
# from these decisions.
[lints.rust]
# Edition 2024 promotes `unsafe_op_in_unsafe_fn` (calling an unsafe
# intrinsic in an `unsafe fn` body without an inner `unsafe {}` block).
# The hand-written SIMD kernels (NEON / SSE / AVX / wasm-simd) trip it
# ~121× across ~33 fns (uniward_simd, inject, embed, fft2d_simd,
# embedding_simd, optimizer_simd, pixels_aan_simd, av1_uniward).
#
# DELIBERATE POSTURE (decided 2026-06-09, #846): keep at `warn` — the
# `rust_2024_compatibility` migration default — rather than wrap every
# intrinsic. The wrapping is purely syntactic (zero behavior change), and
# these kernels are bit-exact cross-platform; churning 121 edits through
# determinism-critical SIMD for a cosmetic lint isn't worth the risk.
# `warn` keeps the migration visible AND lets a FRESH build of the
# published decode-only mirror compile (without it the staged tree hits
# E0133). If we ever wrap them, drop this line.
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
needless_range_loop = "allow"
too_many_arguments = "allow"
many_single_char_names = "allow"
doc_lazy_continuation = "allow"
type_complexity = "allow"
