[package]
name = "phasm-cli"
version = "0.3.2"
edition = "2024"
license = "GPL-3.0-only"
description = "CLI for phasm-core steganography"
repository = "https://github.com/cgaffga/phasmcore"
authors = ["Christoph Gaffga"]

[[bin]]
name = "phasm"
path = "src/main.rs"

[dependencies]
# IMPORTANT: do NOT add `video` or any H.264 feature to phasm-core's
# features here. The GitHub-release CLI binary distributed via
# cargo-dist must NOT bundle ANY H.264 code (Via LA AVC patent
# obligations — see `docs/design/video/h264/video-steganography.md`
# § "Patent licensing — distribution plan"). Users wanting CLI
# video stego rebuild from source themselves with:
#     cargo install phasm-cli --features h264-encoder   (encode + decode)
#     cargo install phasm-cli --features h264-decoder        (decode only)
phasm-core = { path = "..", features = ["parallel"] }
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "tiff", "gif"] }
indicatif = "0.17"
rpassword = "7"

[features]
default = []
# v0.2.9 — `video` is now opt-in at the CLI level too. Default
# builds (and the cargo-dist GitHub-release binary) compile zero
# H.264 code: no parser, no walker, no streaming session, no
# `video-encode` / `video-capacity` subcommands. Forwards to
# phasm-core's `video` feature.
video = ["phasm-core/video"]
# H.264 stego DECODE only — the pure-Rust bin-walker, no OpenH264 C
# dependency and no encoder. Lets a source build decode phasm H.264
# stego videos (e.g. on a machine that can't / won't link OpenH264).
# Forwards to phasm-core's `h264-decoder` feature.
h264-decoder = ["video", "phasm-core/h264-decoder"]
