[package]
name = "phasm-cli"
version = "0.3.2"
edition = "2024"
license = "GPL-3.0-only"
description = "CLI for phasm-core steganography"
repository = "https://github.com/cgaffga/phasmcore"
authors = ["Christoph Gaffga"]

[[bin]]
name = "phasm"
path = "src/main.rs"

# One-off measurement helper for the AV1 W2 speed × QP sweep. Demuxes
# an MP4 produced by phasm AV1 stego encode, splices the av1C
# sequence_header_obu before every sync sample, and writes a raw
# "section 5" OBU stream to stdout — feedable straight into the
# stand-alone `dav1d` CLI. Required because ffmpeg's MP4 demuxer
# does NOT splice av1C → samples; phasm's iOS / streaming-decoder
# paths do. Gated behind `av1-encoder` (needs `codec::mp4` + Track::is_av1).
[[bin]]
name = "av1_obu_extract"
path = "src/bin/av1_obu_extract.rs"
required-features = ["av1-encoder"]


[dependencies]
# IMPORTANT: do NOT add `video` or any H.264 feature to phasm-core's
# features here. The GitHub-release CLI binary distributed via
# cargo-dist must NOT bundle ANY H.264 code (Via LA AVC patent
# obligations — see `docs/design/video/h264/video-steganography.md`
# § "Patent licensing — distribution plan"). Users wanting CLI
# video stego rebuild from source themselves with:
#     cargo install phasm-cli --features h264-encoder   (encode + decode)
#     cargo install phasm-cli --features h264-decoder        (decode only)
phasm-core = { path = "..", features = ["parallel"] }
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "tiff", "gif"] }
indicatif = "0.17"
rpassword = "7"
# Optional, video-only: mmap the decoded YUV temp file in the non-shadow
# OH264 encode so a long clip's decoded YUV is evictable page cache, not a
# non-evictable O(clip) heap allocation (OOM-safe). Same version phasm-core
# pins for its `video` feature.
memmap2 = { version = "0.9", optional = true }

[features]
default = []
# v0.2.9 — `video` is now opt-in at the CLI level too. Default
# builds (and the cargo-dist GitHub-release binary) compile zero
# H.264 code: no parser, no walker, no streaming session, no
# `video-encode` / `video-capacity` subcommands. Forwards to
# phasm-core's `video` feature.
video = ["phasm-core/video", "dep:memmap2"]
# H.264 stego DECODE only — the pure-Rust bin-walker, no OpenH264 C
# dependency and no encoder. Lets a source build decode phasm H.264
# stego videos (e.g. on a machine that can't / won't link OpenH264).
# Forwards to phasm-core's `h264-decoder` feature.
h264-decoder = ["video", "phasm-core/h264-decoder"]
