[package]
name = "phasm-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phasm-core = { path = "..", features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
# Skip wasm-opt: Rust edition 2024 emits bulk-memory and nontrapping-fptoint
# instructions that wasm-opt's validator rejects. These features are supported
# by all modern browsers (Chrome 75+, Firefox 79+, Safari 15+).
wasm-opt = false

[profile.release]
lto = true
strip = "symbols"
opt-level = "s"
