[package]
name = "phasm-wasm"
version = "0.1.0"
edition = "2021"

# Declare a standalone workspace so cargo does NOT try to attach this
# crate to the phasm-core workspace when wasm-bridge sits next to core's
# manifest in the synced phasmcore layout. In the monorepo this is a
# no-op (no parent Cargo.toml at phasm/); in phasmcore it decouples
# wasm-bridge from the phasm-core workspace, which only declares
# ["cli", "openh264-sys"] as members.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phasm-core = { path = "..", features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
# Skip wasm-opt: Rust edition 2024 emits bulk-memory and nontrapping-fptoint
# instructions that wasm-opt's validator rejects. These features are supported
# by all modern browsers (Chrome 75+, Firefox 79+, Safari 15+).
wasm-opt = false

# WASM ship profile — same mobile-ship knobs as the iOS/Android bridges,
# but inlined into `[profile.release]` because wasm-pack 0.14 only honors
# `[package.metadata.wasm-pack.profile.release]` for its wasm-opt config.
# opt-level=s balances browser-download size vs. encode speed.
# See `docs/design/build-optimization.md`.
[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
overflow-checks = false

[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
